--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li>Commit 3</li>
         <li>Commit 4</li>
         <li>Commit 5</li>
+        <li>Commit 6</li>
     </ul>
     <h4>hotfixes</h4>
 </body>
